--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.12.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.3
 aiosignal==1.4.0
@@ -13,6 +14,7 @@ babel==2.17.0
 backoff==2.2.1
 bcrypt==5.0.0
 beautifulsoup4==4.14.3
+bitsandbytes==0.49.1
 bleach==6.3.0
 build==1.4.0
 certifi==2026.1.4
@@ -31,23 +33,31 @@ defusedxml==0.7.1
 distro==1.9.0
 durationpy==0.10
 executing==2.2.1
+faiss-cpu==1.13.2
 fastjsonschema==2.21.2
 filelock==3.20.2
 flatbuffers==25.12.19
 fqdn==1.5.1
 frozenlist==1.8.0
 fsspec==2025.12.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.29.0
+google-api-python-client==2.188.0
 google-auth==2.47.0
+google-auth-httplib2==0.3.0
+google-generativeai==0.8.6
 googleapis-common-protos==1.72.0
 greenlet==3.3.0
 grpcio==1.76.0
+grpcio-status==1.71.2
 h11==0.16.0
 hf-xet==1.2.0
 httpcore==1.0.9
+httplib2==0.31.1
 httptools==0.7.1
 httpx==0.28.1
 httpx-sse==0.4.3
-huggingface_hub==1.2.4
+huggingface-hub==0.36.0
 humanfriendly==10.0
 idna==3.11
 importlib_metadata==8.7.1
@@ -58,7 +68,10 @@ ipython_pygments_lexers==1.1.1
 ipywidgets==8.1.8
 isoduration==20.11.0
 jedi==0.19.2
+jieba==0.42.1
 Jinja2==3.1.6
+jiter==0.12.0
+joblib==1.5.3
 json5==0.13.0
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -102,11 +115,28 @@ nbclient==0.10.4
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.6.1
 notebook==7.5.1
 notebook_shim==0.2.4
 numpy==2.4.0
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu12==12.8.90
 oauthlib==3.3.1
 onnxruntime==1.23.2
+openai==2.15.0
 opentelemetry-api==1.39.1
 opentelemetry-exporter-otlp-proto-common==1.39.1
 opentelemetry-exporter-otlp-proto-grpc==1.39.1
@@ -125,6 +155,7 @@ posthog==5.4.0
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
 propcache==0.4.1
+proto-plus==1.27.0
 protobuf==6.33.2
 psutil==7.2.1
 ptyprocess==0.7.0
@@ -137,6 +168,8 @@ pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
+pylatexenc==2.10
+pyparsing==3.3.1
 pypd==1.1.0
 pypdf==6.5.0
 PyPika==0.48.9
@@ -146,6 +179,7 @@ python-dotenv==1.2.1
 python-json-logger==4.0.0
 PyYAML==6.0.3
 pyzmq==27.1.0
+rank-bm25==0.2.2
 referencing==0.37.0
 regex==2025.11.3
 requests==2.32.5
@@ -157,22 +191,31 @@ rfc3987-syntax==1.1.0
 rich==14.2.0
 rpds-py==0.30.0
 rsa==4.9.1
+safetensors==0.7.0
+scikit-learn==1.8.0
+scipy==1.17.0
 Send2Trash==2.0.0
+sentence-transformers==5.2.0
 setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
+sniffio==1.3.1
 soupsieve==2.8.1
 SQLAlchemy==2.0.45
 stack-data==0.6.3
 sympy==1.14.0
 tenacity==9.1.2
 terminado==0.18.1
+threadpoolctl==3.6.0
 tiktoken==0.12.0
 tinycss2==1.4.0
 tokenizers==0.22.2
+torch==2.9.1
 tornado==6.5.4
 tqdm==4.67.1
 traitlets==5.14.3
+transformers==4.57.5
+triton==3.5.1
 typer==0.21.1
 typer-slim==0.21.1
 typing-inspect==0.9.0
@@ -180,6 +223,7 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.3
 uri-template==1.3.0
+uritemplate==4.2.0
 urllib3==2.3.0
 uuid_utils==0.12.0
 uvicorn==0.40.0
